--- a/Core.Framework.API.Messages/Core.Framework.API.Messages.csproj
+++ b/Core.Framework.API.Messages/Core.Framework.API.Messages.csproj
@@ -1,7 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
-
+    <PropertyGroup>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <PackageId>Core.Framework.API.Messages</PackageId>
+        <Description>Base framework for Web API request/response messages.</Description>
+        <Authors>Rafael Cruzeiro</Authors>
+        <Version>1.0.0</Version>
+    </PropertyGroup>
 </Project>
