--- a/Core.Framework.Cache/Core.Framework.Cache.csproj
+++ b/Core.Framework.Cache/Core.Framework.Cache.csproj
@@ -1,13 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Redis\" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <PackageId>Core.Framework.Cache</PackageId>
+        <Description>Cache tool with Redis support.</Description>
+        <Authors>Rafael Cruzeiro</Authors>
+        <Version>1.0.0</Version>
+    </PropertyGroup>
+    <ItemGroup>
+        <Folder Include="Redis\" />
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="StackExchange.Redis" Version="2.0.513" />
+    </ItemGroup>
 </Project>
