--- a/Core.Framework.API.Messages/Core.Framework.API.Messages.csproj
+++ b/Core.Framework.API.Messages/Core.Framework.API.Messages.csproj
@@ -1,10 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <PackageId>Core.Framework.API.Messages</PackageId>
         <Description>Base framework for Web API request/response messages.</Description>
         <Authors>Rafael Cruzeiro</Authors>
-        <Version>1.0.0</Version>
+        <Version>1.1.0</Version>
     </PropertyGroup>
+    <ItemGroup>
+      <None Remove="nuget\Core.Framework.API.Messages.1.0.0.nupkg" />
+    </ItemGroup>
 </Project>
