--- a/Core.Framework.AWS.S3/Core.Framework.AWS.S3.csproj
+++ b/Core.Framework.AWS.S3/Core.Framework.AWS.S3.csproj
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
-        <PackageId>Core.Framework.AWS.Notifier</PackageId>
-        <Description>Tool for supporting AWS SNS Pub/Sub messages.</Description>
+        <PackageId>Core.Framework.AWS.S3</PackageId>
+        <Description>Tool for supporting AWS S3 management.</Description>
         <Authors>Rafael Cruzeiro</Authors>
         <Version>1.0.0</Version>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="AWSSDK.Core" Version="3.3.29.14" />
-        <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.3.4" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+        <PackageReference Include="AWSSDK.S3" Version="3.3.31.1" />
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Model\" />
