--- a/Core.Framework.AWS.Notifier/Core.Framework.AWS.Notifier.csproj
+++ b/Core.Framework.AWS.Notifier/Core.Framework.AWS.Notifier.csproj
@@ -5,14 +5,15 @@
         <PackageId>Core.Framework.AWS.Notifier</PackageId>
         <Description>Tool for supporting AWS SNS Pub/Sub messages.</Description>
         <Authors>Rafael Cruzeiro</Authors>
-        <Version>1.0.1</Version>
+        <Version>2.0.0</Version>
+        <PackOnBuild>true</PackOnBuild>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+      <DebugType></DebugType>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="AWSSDK.Core" Version="3.3.29.14" />
-        <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.3.4" />
+        <PackageReference Include="AWSSDK.Core" Version="3.3.31.3" />
+        <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.3.14" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    </ItemGroup>
-    <ItemGroup>
-        <Folder Include="Model\" />
     </ItemGroup>
 </Project>
