--- a/Core.Framework.Notification/Core.Framework.Notification.csproj
+++ b/Core.Framework.Notification/Core.Framework.Notification.csproj
@@ -1,7 +1,16 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
-
+    <PropertyGroup>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <PackageId>Core.Framework.Notification</PackageId>
+        <PackOnBuild>true</PackOnBuild>
+        <PackageVersion>1.0.0</PackageVersion>
+        <Description>Interfaces to guide the send message implementations</Description>
+        <Title>Core.Framework.Notification</Title>
+        <Authors>Rafael Cruzeiro</Authors>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+        <DebugType>
+        </DebugType>
+    </PropertyGroup>
 </Project>
