--- a/Core.Framework.Cqrs/Core.Framework.Cqrs.csproj
+++ b/Core.Framework.Cqrs/Core.Framework.Cqrs.csproj
@@ -5,6 +5,7 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Remove="Class1.cs" />
+        <Folder Include="Commands\" />
+        <Folder Include="Queries\" />
     </ItemGroup>
 </Project>
